libs/@local/config/tests/snapshots/schema__flattened_external_enum.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<FlattenedExternal>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "FlattenedExternal",
  "type": "object",
  "anyOf": [
    {
      "type": "object",
      "properties": {
        "Database": {
          "type": "object",
          "properties": {
            "host": {
              "description": "Database hostname.",
              "type": "string"
            },
            "port": {
              "description": "Database port.",
              "type": "integer",
              "format": "uint16",
              "maximum": 65535,
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        }
      }
    },
    {
      "type": "object",
      "properties": {
        "Memory": {
          "type": "object",
          "properties": {
            "capacity": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        }
      }
    }
  ],
  "unevaluatedProperties": false
}
