libs/@local/config/tests/snapshots/schema__flattened_map.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<FlattenedMap>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "FlattenedMap",
  "type": "object",
  "properties": {
    "enabled": {
      "type": "boolean"
    }
  },
  "additionalProperties": {
    "type": "object",
    "properties": {
      "host": {
        "description": "Database hostname.",
        "type": "string"
      },
      "port": {
        "description": "Database port.",
        "type": "integer",
        "format": "uint16",
        "maximum": 65535,
        "minimum": 0
      }
    },
    "unevaluatedProperties": false
  },
  "unevaluatedProperties": false
}
