libs/@local/config/tests/snapshots/schema__internally_tagged_newtype.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<InternalNewtype>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "InternalNewtype",
  "anyOf": [
    {
      "type": "object",
      "properties": {
        "host": {
          "description": "Database hostname.",
          "type": "string"
        },
        "kind": {
          "type": "string",
          "const": "Database"
        },
        "port": {
          "description": "Database port.",
          "type": "integer",
          "format": "uint16",
          "maximum": 65535,
          "minimum": 0
        }
      }
    },
    {
      "type": "object",
      "properties": {
        "capacity": {
          "type": "integer",
          "format": "uint32",
          "minimum": 0
        },
        "kind": {
          "type": "string",
          "const": "Memory"
        }
      }
    }
  ],
  "unevaluatedProperties": false
}
