libs/@local/config/tests/snapshots/schema__keyword_names.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<KeywordNames>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "KeywordNames",
  "type": "object",
  "properties": {
    "required": {
      "type": "object",
      "properties": {
        "host": {
          "description": "Database hostname.",
          "type": "string"
        },
        "port": {
          "description": "Database port.",
          "type": "integer",
          "format": "uint16",
          "maximum": 65535,
          "minimum": 0
        }
      },
      "unevaluatedProperties": false
    }
  },
  "unevaluatedProperties": false
}
