libs/@local/config/tests/snapshots/schema__nested_struct.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<Config>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Config",
  "type": "object",
  "properties": {
    "backend": {
      "anyOf": [
        {
          "type": "object",
          "properties": {
            "capacity": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0
            },
            "kind": {
              "type": "string",
              "const": "memory"
            }
          }
        },
        {
          "type": "object",
          "properties": {
            "directory": {
              "type": "string"
            },
            "kind": {
              "type": "string",
              "const": "disk"
            }
          }
        }
      ],
      "unevaluatedProperties": false
    },
    "log-level": {
      "type": "string"
    },
    "store": {
      "type": "object",
      "properties": {
        "host": {
          "description": "Database hostname.",
          "type": "string"
        },
        "port": {
          "description": "Database port.",
          "type": "integer",
          "format": "uint16",
          "maximum": 65535,
          "minimum": 0
        }
      },
      "unevaluatedProperties": false
    }
  },
  "unevaluatedProperties": false
}
