libs/@local/config/tests/snapshots/schema__recursive_fields.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<Tree>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Tree",
  "type": "object",
  "properties": {
    "root": {
      "type": "object",
      "properties": {
        "children": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/Node"
          }
        },
        "name": {
          "type": "string"
        }
      },
      "unevaluatedProperties": false
    }
  },
  "unevaluatedProperties": false,
  "$defs": {
    "Node": {
      "type": "object",
      "properties": {
        "children": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/Node"
          }
        },
        "name": {
          "type": "string"
        }
      },
      "unevaluatedProperties": false
    }
  }
}
